# park-vga

./: .gitattributes  README.md  pixi.toml  pyproject.toml
example_datasets/: SE23ne_DTM_1m.tif  SE23ne_FZ_DSM_1m.tif  SE23se_DTM_1m.tif  SE23se_FZ_DSM_1m.tif
notebooks/: view_gis_output.ipynb
notebooks/version_1_lidar_analysis/: 00_method_Jan_2026.ipynb  01_method_Jan_2026.ipynb
outputs/method_00/: Woodhouse_Moor_10_m_grid.geojson
outputs/method_01/: Woodhouse_Moor_10_m_grid_100m_vis.geojson  Woodhouse_Moor_10_m_grid_250m_vis.geojson
processed_datasets/: Leeds_Woodhouse_Moor_old_VGA_analysis.geojson  Leeds_Woodhouse_Moor_park_boundaries.geojson
qgis_work/: diff_10m_geo.tif  final_diff_20m.tif
src/park_vga/: __init__.py
