[project]
name = "park_vga"
version = "0.1.0"
description = "Visibility analysis in parks"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "shapely",
    "pandas",
    "numpy"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]
